# irols

./: .gitignore  .gitmodules  .spyderworkspace  CMakeLists.txt  README.md  TODO  cascade.py  fisparse.py  fisutils.py  fisyaml.py  ga.py  gfs.py  package.xml  package.xml.new  parsefis.py  setup.py  simple_test.yaml  yapflm.py
action/: DoArm.action  DoFLC.action  DoFitness.action  DoGA.action  DoLand.action  DoLandMachine.action  DoSeek.action  DoWP.action
bags/: expert_topics  ind_bare.bag  irols_topics
cfg/: moveCam.cfg  picture.cfg  pid_gains.cfg
configs/: apriltag.rviz  camera.yaml  estimator_validation.rviz  irols_tf.rviz  lezl  lezl.fis  lezl.yaml  lezl2.fis  lezl2.yaml  lezl3.fis  lezl3.yaml  lezl4.fis  lezl4.yaml  rcS_gazebo_irols_cam  x_fis.yaml  y_fis.yaml
examples/: GA_example.py  fn_approx_example.py  fuzzy_crt_opt.fis  fuzzy_lim_opt.fis  fuzzy_wn_opt.fis  simple_test.py  testpickle  tip_example.py  tip_example2.py
gazebo/: setup_gazebo_ros.bash
launch/: action.launch  apriltag_test.launch  apriltags_ros.launch  ax_clients.launch  cv_cam.launch  ekf.launch  empty_world_log.launch  image_pipeline.launch  irols.launch  irols_landing.launch  irols_sim.launch  mavros.launch  mavros_posix_sitl_irols.launch  posix_sitl_irols.launch  px4.launch  px4_config.yaml  px4_pluginlists.yaml  test_apriltags_webcam.launch  test_estimator.launch  webcam.launch
msg/: FIS.msg  FISArray.msg  MF.msg  Rule.msg  SimState.msg  Var.msg
nodes/: commander.py  orbit.py  pioneer_circle.py  run_ga.py  static_expert.py  test_yapflm_import.py  yapflm
scripts/: arm_action.py  (+28 more)
(+65 files in other folders)
